--- a/index.html
+++ b/index.html
@@ -64,103 +64,103 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><a href="#">6ix9ine Nicki Minaj - TROLLZ with</a></td>
-                    <td> 17 June 02:20</td>
+                    <td><a href="https://spankradio.uk/tracks/hip-hop-rb/run-dmc-proud-to-be-black">Run DMC – Proud to Be Black</a></td>
+                    <td> 10 October 03:10</td>
                     <td>289</td>
                 </tr>
                 <tr>
-                    <td><a href="#">Drake - Toosie Slide</a></td>
-                    <td> 11 June 11:50</td>
+                    <td><a href="https://spankradio.uk/tracks/hip-hop-rb/lupe-fiasco-all-black-everything">Lupe Fiasco – All Black Everything</a></td>
+                    <td> 10 October 03:00</td>
                     <td>206</td>
                 </tr>
                 <tr>
-                    <td><a href="#">Harry Styles Watermelon Sugar</a></td>
-                    <td> 05 June 02:59</td>
+                    <td><a href="https://spankradio.uk/tracks/hip-hop-rb/2pac-words-of-wisdom">2Pac – Words Of Wisdom</a></td>
+                    <td> 10 October 02:59</td>
                     <td>201</td>
                 </tr>
                 <tr>
-                    <td><a href="#">Megan Thee Stallion &amp; Beyoncé Savage</a></td>
-                    <td> 04 June 02:32</td>
+                    <td><a href="https://spankradio.uk/tracks/hip-hop-rb/the-game-letter-to-the-king">The Game – Letter To The King</a></td>
+                    <td> 10 October 02:32</td>
                     <td>216</td>
                 </tr>
                 <tr>
-                    <td><a href="#">6ix9ine - GOOBA</a></td>
-                    <td> 04 June 01:00</td>
+                    <td><a href="https://spankradio.uk/tracks/afro/unconditionally-olamide-peruzzi">Olamide ft. Peruzzi - Unconditionally</a></td>
+                    <td> 08 October 01:00</td>
                     <td>120</td>
                 </tr>
                 <tr>
-                    <td><a href="#">After You (feat_ AJ Mitchell) Meghan Trainor</a></td>
-                    <td> 19 February 01:52</td>
+                    <td><a href="https://spankradio.uk/tracks/afro/plenty-olamide-ft-fireboy-dml">Olamide ft. Fireboy Dml - Plenty</a></td>
+                    <td> 08 October 01:00</td>
                     <td>167</td>
                 </tr>
                 <tr>
-                    <td><a href="#">Another Opinion Meghan Trainor</a></td>
-                    <td> 19 February 01:52</td>
+                    <td><a href="https://spankradio.uk/tracks/afro/shilalo-olamide-ft-phyno">Olamide ft. Phyno - Shilalo</a></td>
+                    <td> 08 October 00:52</td>
                     <td>127</td>
                 </tr>
                 <tr>
-                    <td><a href="#">Ashes Meghan Trainor</a></td>
-                    <td> 19 February 01:52</td>
+                    <td><a href="https://spankradio.uk/tracks/afro/loading-olamide-ft-bad-boy-timz">Olamide ft. Bad Boy Timz - Loading</a></td>
+                    <td> 08 October 00:52</td>
                     <td>134</td>
                 </tr>
                 <tr>
-                    <td><a href="#">Blink Meghan Trainor</a></td>
-                    <td> 19 February 01:52</td>
+                    <td><a href="https://spankradio.uk/tracks/afro/do-better-olamide">Olamide - Do Better</a></td>
+                    <td> 08 October 00:50</td>
                     <td>164</td>
                 </tr>
                 <tr>
-                    <td><a href="#">Evil Twin Meghan Trainor</a></td>
-                    <td> 19 February 01:51</td>
+                    <td><a href="https://spankradio.uk/tracks/afro/at-your-service-olamide">Olamide - At Your Service</a></td>
+                    <td> 08 October 00:49</td>
                     <td>144</td>
                 </tr>
                 <tr>
-                    <td><a href="#">Genetics (feat_ Pussycat)Meghan Trainor</a></td>
-                    <td> 19 February 01:51</td>
+                    <td><a href="https://spankradio.uk/tracks/afro/triumphant-olamide-bella-shmurda">Olamide ft. Bella Shmurda - Triumphant</a></td>
+                    <td> 08 October 00:47</td>
                     <td>104</td>
                 </tr>
                 <tr>
-                    <td><a href="#">Have You Now Meghan Trainor</a></td>
-                    <td> 19 February 01:51</td>
+                    <td><a href="https://spankradio.uk/tracks/afro/chimichanga-olamide">Olamide - Chimichanga</a></td>
+                    <td> 08 October 00:40</td>
                     <td>154</td>
                 </tr>
                 <tr>
-                    <td><a href="#">Here To Stay Meghan Trainor</a></td>
-                    <td> 19 February 01:51</td>
+                    <td><a href="https://spankradio.uk/tracks/afro/infinity-olamide-ft-omah-lay">Olamide ft. Omah lay - Infinity</a></td>
+                    <td> 08 October 00:40</td>
                     <td>114</td>
                 </tr>
                 <tr>
-                    <td><a href="#">Lie To Me Meghan Trainor</a></td>
-                    <td> 19 February 01:51</td>
+                    <td><a href="https://spankradio.uk/tracks/afro/another-level-olamide/">Olamide - Another Level</a></td>
+                    <td> 08 October 00:38</td>
                     <td>141</td>
                 </tr>
                 <tr>
-                    <td><a href="#">Nice to Meet Ya (feat_ Nicki Minaj) Meghan Trainor</a></td>
-                    <td> 19 February 01:51</td>
+                    <td><a href="https://spankradio.uk/tracks/hip-hop-rb/holy-grail-denise-chaila">Denise Chaila - Holy Grail</a></td>
+                    <td> 08 October 00:00</td>
                     <td>194</td>
                 </tr>
                 <tr>
-                    <td><a href="#">No Excuses Meghan Trainor</a></td>
-                    <td> 19 February 01:50</td>
+                    <td><a href="https://spankradio.uk/tracks/hip-hop-rb/chaila-denise-chaila">Denise Chaila - Chaila</a></td>
+                    <td> 08 October 00:00</td>
                     <td>119</td>
                 </tr>
                 <tr>
-                    <td><a href="#">Wave (feat_ Mike Sabath) Meghan Trainor</a></td>
-                    <td> 19 February 01:50</td>
+                    <td><a href="https://spankradio.uk/tracks/afro/over-hype-mohbad">MohBad - Over Hype</a></td>
+                    <td> 08 October 00:00</td>
                     <td>169</td>
                 </tr>
                 <tr>
-                    <td><a href="#">Workin' On It (feat_ Lennon Stella &amp; Sasha Sloan) Meghan Trainor</a></td>
-                    <td> 19 February 01:50</td>
+                    <td><a href="https://spankradio.uk/tracks/afro/idi-oremi-opotoyi-pt-2-naira-marley">Naira Marley - Idi Oremi (Opotoyi, Pt. 2)</a></td>
+                    <td> 06 October 01:50</td>
                     <td>189</td>
                 </tr>
                 <tr>
-                    <td><a href="#">What A Man Gotta Do Jonas Brothers</a></td>
-                    <td> 15 February 16:34</td>
+                    <td><a href="https://spankradio.uk/tracks/afro/steve-biko-nasty-c/">Nasty C - Steve Biko</a></td>
+                    <td> 06 October 01:34</td>
                     <td>134</td>
                 </tr>
                 <tr>
-                    <td><a href="#">Bad guy Billie Eilish</a></td>
-                    <td> 15 February 16:07</td>
+                    <td><a href="https://spankradio.uk/tracks/afro/puttin-tekno">Tekno - PuTTin</a></td>
+                    <td> 06 October 01:30</td>
                     <td>120</td>
                 </tr>
             </tbody>
