--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+
+<head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SPANK RADIO // For MP3 Fans.</title>
+    <meta name="description" content="" />
+    <meta name="keywords" content="" />
+
+    <meta name="subject" content="">
+    <meta name="language" content="en">
+    <meta name="distribution" content="Global">
+    <meta name="rating" content="General">
+    <meta name="robots" content="index,follow" />
+
     <link rel="shortcut icon" type="image" href="images/favicon.png" title="favicon">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -40,10 +51,10 @@
                         <a href="#about">Songs</a>
                     </div>
                 </li>
-                    <form class="searchbox" style="width: 100%;">
-                        <input type="text" placeholder="Search here" name="search">
-                        <button type="submit"><i class="fa fa-search" style="font-size:15px;color:#ddd"></i></button>
-                    </form>
+                <form class="searchbox" style="width: 100%;">
+                    <input type="text" placeholder="Search here" name="search">
+                    <button type="submit"><i class="fa fa-search" style="font-size:15px;color:#ddd"></i></button>
+                </form>
             </div>
             <a href="javascript:void(0);" class="icon" onclick="myMobileFunction()">
                 <i class="fa fa-bars"></i>
@@ -225,8 +236,11 @@
             <div class="footer-bottom">
                 &copy; Spanky <script>
                     document.write(new Date().getFullYear())
+
                 </script>. All rights reserved
             </div>
         </div>
     </footer>
-</body></html>
+</body>
+
+</html>
