--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
         gtag('config', 'UA-156372537-1');
 
     </script>
+    
+    <script data-ad-client="ca-pub-5749995916718706" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
 
 </head>
