--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta property="og:description" content="" />
 
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="@yourusername" />
+    <meta name="twitter:site" content="@spankradio_" />
     <meta name="twitter:domain" content="Your Domain" />
     <meta name="twitter:title" content="SPANK RADIO // For MP3 Fans." />
     <meta name="twitter:description" content="" />
@@ -108,102 +108,102 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><a href="https://spankradio.uk/tracks/hip-hop-rb/run-dmc-proud-to-be-black">Run DMC – Proud to Be Black</a></td>
+                    <td><a href="https://spankradio.co.uk/tracks/hip-hop-rb/run-dmc-proud-to-be-black">Run DMC – Proud to Be Black</a></td>
                     <td> 10 October 03:10</td>
                     <td>289</td>
                 </tr>
                 <tr>
-                    <td><a href="https://spankradio.uk/tracks/hip-hop-rb/lupe-fiasco-all-black-everything">Lupe Fiasco – All Black Everything</a></td>
+                    <td><a href="https://spankradio.co.uk/tracks/hip-hop-rb/lupe-fiasco-all-black-everything">Lupe Fiasco – All Black Everything</a></td>
                     <td> 10 October 03:00</td>
                     <td>206</td>
                 </tr>
                 <tr>
-                    <td><a href="https://spankradio.uk/tracks/hip-hop-rb/2pac-words-of-wisdom">2Pac – Words Of Wisdom</a></td>
+                    <td><a href="https://spankradio.co.uk/tracks/hip-hop-rb/2pac-words-of-wisdom">2Pac – Words Of Wisdom</a></td>
                     <td> 10 October 02:59</td>
                     <td>201</td>
                 </tr>
                 <tr>
-                    <td><a href="https://spankradio.uk/tracks/hip-hop-rb/the-game-letter-to-the-king">The Game – Letter To The King</a></td>
+                    <td><a href="https://spankradio.co.uk/tracks/hip-hop-rb/the-game-letter-to-the-king">The Game – Letter To The King</a></td>
                     <td> 10 October 02:32</td>
                     <td>216</td>
                 </tr>
                 <tr>
-                    <td><a href="https://spankradio.uk/tracks/afro/unconditionally-olamide-peruzzi">Olamide ft. Peruzzi - Unconditionally</a></td>
+                    <td><a href="https://spankradio.co.uk/tracks/afro/unconditionally-olamide-peruzzi">Olamide ft. Peruzzi - Unconditionally</a></td>
                     <td> 08 October 01:00</td>
                     <td>120</td>
                 </tr>
                 <tr>
-                    <td><a href="https://spankradio.uk/tracks/afro/plenty-olamide-ft-fireboy-dml">Olamide ft. Fireboy Dml - Plenty</a></td>
+                    <td><a href="https://spankradio.co.uk/tracks/afro/plenty-olamide-ft-fireboy-dml">Olamide ft. Fireboy Dml - Plenty</a></td>
                     <td> 08 October 01:00</td>
                     <td>167</td>
                 </tr>
                 <tr>
-                    <td><a href="https://spankradio.uk/tracks/afro/shilalo-olamide-ft-phyno">Olamide ft. Phyno - Shilalo</a></td>
+                    <td><a href="https://spankradio.co.uk/tracks/afro/shilalo-olamide-ft-phyno">Olamide ft. Phyno - Shilalo</a></td>
                     <td> 08 October 00:52</td>
                     <td>127</td>
                 </tr>
                 <tr>
-                    <td><a href="https://spankradio.uk/tracks/afro/loading-olamide-ft-bad-boy-timz">Olamide ft. Bad Boy Timz - Loading</a></td>
+                    <td><a href="https://spankradio.co.uk/tracks/afro/loading-olamide-ft-bad-boy-timz">Olamide ft. Bad Boy Timz - Loading</a></td>
                     <td> 08 October 00:52</td>
                     <td>134</td>
                 </tr>
                 <tr>
-                    <td><a href="https://spankradio.uk/tracks/afro/do-better-olamide">Olamide - Do Better</a></td>
+                    <td><a href="https://spankradio.co.uk/tracks/afro/do-better-olamide">Olamide - Do Better</a></td>
                     <td> 08 October 00:50</td>
                     <td>164</td>
                 </tr>
                 <tr>
-                    <td><a href="https://spankradio.uk/tracks/afro/at-your-service-olamide">Olamide - At Your Service</a></td>
+                    <td><a href="https://spankradio.co.uk/tracks/afro/at-your-service-olamide">Olamide - At Your Service</a></td>
                     <td> 08 October 00:49</td>
                     <td>144</td>
                 </tr>
                 <tr>
-                    <td><a href="https://spankradio.uk/tracks/afro/triumphant-olamide-bella-shmurda">Olamide ft. Bella Shmurda - Triumphant</a></td>
+                    <td><a href="https://spankradio.co.uk/tracks/afro/triumphant-olamide-bella-shmurda">Olamide ft. Bella Shmurda - Triumphant</a></td>
                     <td> 08 October 00:47</td>
                     <td>104</td>
                 </tr>
                 <tr>
-                    <td><a href="https://spankradio.uk/tracks/afro/chimichanga-olamide">Olamide - Chimichanga</a></td>
+                    <td><a href="https://spankradio.co.uk/tracks/afro/chimichanga-olamide">Olamide - Chimichanga</a></td>
                     <td> 08 October 00:40</td>
                     <td>154</td>
                 </tr>
                 <tr>
-                    <td><a href="https://spankradio.uk/tracks/afro/infinity-olamide-ft-omah-lay">Olamide ft. Omah lay - Infinity</a></td>
+                    <td><a href="https://spankradio.co.uk/tracks/afro/infinity-olamide-ft-omah-lay">Olamide ft. Omah lay - Infinity</a></td>
                     <td> 08 October 00:40</td>
                     <td>114</td>
                 </tr>
                 <tr>
-                    <td><a href="https://spankradio.uk/tracks/afro/another-level-olamide/">Olamide - Another Level</a></td>
+                    <td><a href="https://spankradio.co.uk/tracks/afro/another-level-olamide/">Olamide - Another Level</a></td>
                     <td> 08 October 00:38</td>
                     <td>141</td>
                 </tr>
                 <tr>
-                    <td><a href="https://spankradio.uk/tracks/hip-hop-rb/holy-grail-denise-chaila">Denise Chaila - Holy Grail</a></td>
+                    <td><a href="https://spankradio.co.uk/tracks/hip-hop-rb/holy-grail-denise-chaila">Denise Chaila - Holy Grail</a></td>
                     <td> 08 October 00:00</td>
                     <td>194</td>
                 </tr>
                 <tr>
-                    <td><a href="https://spankradio.uk/tracks/hip-hop-rb/chaila-denise-chaila">Denise Chaila - Chaila</a></td>
+                    <td><a href="https://spankradio.co.uk/tracks/hip-hop-rb/chaila-denise-chaila">Denise Chaila - Chaila</a></td>
                     <td> 08 October 00:00</td>
                     <td>119</td>
                 </tr>
                 <tr>
-                    <td><a href="https://spankradio.uk/tracks/afro/over-hype-mohbad">MohBad - Over Hype</a></td>
+                    <td><a href="https://spankradio.co.uk/tracks/afro/over-hype-mohbad">MohBad - Over Hype</a></td>
                     <td> 08 October 00:00</td>
                     <td>169</td>
                 </tr>
                 <tr>
-                    <td><a href="https://spankradio.uk/tracks/afro/idi-oremi-opotoyi-pt-2-naira-marley">Naira Marley - Idi Oremi (Opotoyi, Pt. 2)</a></td>
+                    <td><a href="https://spankradio.co.uk/tracks/afro/idi-oremi-opotoyi-pt-2-naira-marley">Naira Marley - Idi Oremi (Opotoyi, Pt. 2)</a></td>
                     <td> 06 October 01:50</td>
                     <td>189</td>
                 </tr>
                 <tr>
-                    <td><a href="https://spankradio.uk/tracks/afro/steve-biko-nasty-c/">Nasty C - Steve Biko</a></td>
+                    <td><a href="https://spankradio.co.uk/tracks/afro/steve-biko-nasty-c/">Nasty C - Steve Biko</a></td>
                     <td> 06 October 01:34</td>
                     <td>134</td>
                 </tr>
                 <tr>
-                    <td><a href="https://spankradio.uk/tracks/afro/puttin-tekno">Tekno - PuTTin</a></td>
+                    <td><a href="https://spankradio.co.uk/tracks/afro/puttin-tekno">Tekno - PuTTin</a></td>
                     <td> 06 October 01:30</td>
                     <td>120</td>
                 </tr>
