--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 
     </script>
     
-    <script data-ad-client="ca-pub-5749995916718706" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6830210700230296"
+     crossorigin="anonymous"></script>
 
 
 </head>
